--- a/assets/styles.css
+++ b/assets/styles.css
@@ -56,6 +56,7 @@ header {
 }
 
 #logo-relay {
+    height: 30px;
     padding: 10px;
 }   
 
@@ -278,10 +279,12 @@ footer {
     margin-top: 22%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     color: white;
 }
 
 #logo-mozilla {
+    height: 25px;
     padding: 20px;
 }
 
@@ -402,7 +405,7 @@ footer {
     #button {
         display: flex;
         justify-content: center;
-        margin-bottom: 10px;
+        margin-bottom: 8px;
     }
 
     #alias-button {
